Added category tree and menu item

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -32,6 +32,11 @@
                                 Operations
                             </a>
                         </li>
+                        <li>
+                            <a href="{{ path('category') }}">
+                                Category
+                            </a>
+                        </li>
                     </ul>
                 </section>
                 {% endblock %}
